Query Parameter update
